syntax = "proto3";

package youtube_action;

service YouTubeAction {
    // Chat management
    rpc SendLiveChatMessage(SendMessageRequest) returns (ActionResponse);
    rpc DeleteLiveChatMessage(DeleteMessageRequest) returns (ActionResponse);
    rpc BanLiveChatUser(BanUserRequest) returns (ActionResponse);
    rpc UnbanLiveChatUser(UnbanUserRequest) returns (ActionResponse);

    // Moderation
    rpc AddModerator(ModeratorRequest) returns (ActionResponse);
    rpc RemoveModerator(ModeratorRequest) returns (ActionResponse);

    // Video management
    rpc UpdateVideoTitle(UpdateTitleRequest) returns (ActionResponse);
    rpc UpdateVideoDescription(UpdateDescriptionRequest) returns (ActionResponse);

    // Playlist management
    rpc AddToPlaylist(PlaylistAddRequest) returns (ActionResponse);
    rpc RemoveFromPlaylist(PlaylistRemoveRequest) returns (ActionResponse);
    rpc CreatePlaylist(CreatePlaylistRequest) returns (CreatePlaylistResponse);

    // Broadcast management
    rpc UpdateBroadcastStatus(BroadcastStatusRequest) returns (ActionResponse);
    rpc InsertCuepoint(CuepointRequest) returns (ActionResponse);

    // Comment management
    rpc PostComment(CommentRequest) returns (ActionResponse);
    rpc ReplyToComment(ReplyRequest) returns (ActionResponse);
    rpc DeleteComment(DeleteCommentRequest) returns (ActionResponse);
    rpc SetCommentModeration(ModerationRequest) returns (ActionResponse);
}

message SendMessageRequest {
    string live_chat_id = 1;
    string message = 2;
    string channel_id = 3;
}

message DeleteMessageRequest {
    string message_id = 1;
    string channel_id = 2;
}

message BanUserRequest {
    string live_chat_id = 1;
    string channel_id = 2;
    string target_channel_id = 3;
    int32 duration_seconds = 4;
}

message UnbanUserRequest {
    string live_chat_id = 1;
    string channel_id = 2;
    string target_channel_id = 3;
}

message ModeratorRequest {
    string live_chat_id = 1;
    string channel_id = 2;
    string target_channel_id = 3;
}

message UpdateTitleRequest {
    string video_id = 1;
    string title = 2;
    string channel_id = 3;
}

message UpdateDescriptionRequest {
    string video_id = 1;
    string description = 2;
    string channel_id = 3;
}

message PlaylistAddRequest {
    string playlist_id = 1;
    string video_id = 2;
    string channel_id = 3;
}

message PlaylistRemoveRequest {
    string playlist_item_id = 1;
    string channel_id = 2;
}

message CreatePlaylistRequest {
    string title = 1;
    string description = 2;
    string privacy = 3;
    string channel_id = 4;
}

message CreatePlaylistResponse {
    bool success = 1;
    string message = 2;
    string playlist_id = 3;
}

message BroadcastStatusRequest {
    string broadcast_id = 1;
    string status = 2;
    string channel_id = 3;
}

message CuepointRequest {
    string broadcast_id = 1;
    int32 duration_seconds = 2;
    string channel_id = 3;
}

message CommentRequest {
    string video_id = 1;
    string text = 2;
    string channel_id = 3;
}

message ReplyRequest {
    string parent_id = 1;
    string text = 2;
    string channel_id = 3;
}

message DeleteCommentRequest {
    string comment_id = 1;
    string channel_id = 2;
}

message ModerationRequest {
    string comment_id = 1;
    string status = 2;
    string channel_id = 3;
}

message ActionResponse {
    bool success = 1;
    string message = 2;
}
